--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
+    "normalizr": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
     "reselect": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "PORT=4000 react-scripts start",
+    "build": "PORT=4000 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
