--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "normalizr": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-onclickout": "^2.0.8",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
