--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.13",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalizr": "^3.4.0",
     "react": "^16.8.6",
