--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-onclickout": "^2.0.8",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "react-waypoint": "^9.0.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
     "reselect": "^4.0.0"
